--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <style>
         #spinner {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            margin-top: 150px;
         }
 
         #spinner img {
-
+            width: 200px;
+            height: 200px;
             margin: auto;
-            height: auto;
-            border: 1px solid black;
         }
     </style>
 </head>
 
-<body class="bg-gray-100">
+<body>
     <header class="my-6">
         <!-- input field and button  -->
         <div class="text-center">
